--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           ingrese aquí con las mismas credenciales y obtenga este beneficio
         </p>
         <br><br>
-               <a href="https://bp20-658c6a2ac01d.herokuapp.com//" class="btn">Enviar Solicitud de Participación</a>
+               <a href="https://bp20-658c6a2ac01d.herokuapp.com/" class="btn">Enviar Solicitud de Participación</a>
  
       </div>
     </div>
@@ -131,6 +131,7 @@
 
 </body>
 </html>
+
 
 
 
